--- a/style.css
+++ b/style.css
@@ -26,10 +26,10 @@ body * {
   width: 112px;
   border-radius: 50%;
   outline: 8px solid transparent;
-  transition: 0.5s;
 }
 #profile img:hover {
   outline: 8px solid rgb(255, 255, 255, 0.1);
+  transition: 0.5s;
 }
 #profile p {
   font-weight: 500;
@@ -47,7 +47,6 @@ body * {
   border: 1px solid rgb(255, 255, 255, 0.5);
   background: rgb(255, 255, 255, 0.05);
   border-radius: 8px;
-  transition: 0.5s;
 }
 #portals li a {
   display: flex;
@@ -59,6 +58,7 @@ body * {
 #portals li:hover {
   border: 1.5px solid rgb(255, 255, 255, 1);
   background: rgb(255, 255, 255, 0.1);
+  transition: 0.5s;
 }
 #social-links {
   padding: 24px;
@@ -73,34 +73,43 @@ body * {
   justify-content: center;
   padding: 8px;
   border-radius: 50%;
-  transition: 0.5s;
 }
 #social-links a:hover {
   background: rgba(255, 255, 255, 0.1);
+  transition: 0.5s;
 }
 footer {
   display: flex;
   flex-direction: column;
   gap: 24px;
   padding: 24px;
-  margin-top: 24px;
-  font-size: 14px;
+  font-size: 12px;
   text-align: center;
-  background-color: rgb(255, 255, 255, 0.05);
-  border-radius: 8px;
-  border: 1px solid rgb(255, 255, 255, 0.5);
 }
 footer ul {
   display: flex;
+  justify-content: center;
+  align-items: center;
   list-style: none;
-  gap: 8px;
+  gap: 16px;
 }
 footer ul li a {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
   line-height: 24px;
-  transition: 0.5s;
 }
 footer ul li a:hover {
   font-weight: 500;
-  font-size: 16px;
+}
+footer ul li a img {
+  width: 66px;
+  outline: 6px solid transparent;
+  border-radius: 50%;
+}
+footer ul li a:hover img {
+  outline: 6px solid rgba(255, 255, 255, 0.1);
+  transition: 0.5s;
 }
