--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body * {
   color: white;
 }
 #container {
-  width: 360px;
+  width: 720px;
   margin: auto;
 }
 #profile {
@@ -40,10 +40,13 @@ body * {
   padding: 24px;
   list-style: none;
   display: flex;
-  flex-direction: column;
-  gap: 16px;
+  flex-wrap: wrap;
+  column-count: 2;
+  justify-content: center;
+  gap: 8px;
 }
 #portals li {
+  width: calc(50% - 10px);
   border: 1px solid rgb(255, 255, 255, 0.5);
   background: rgb(255, 255, 255, 0.05);
   border-radius: 8px;
@@ -51,7 +54,7 @@ body * {
 #portals li a {
   display: flex;
   justify-content: center;
-  padding: 16px 24px;
+  padding: 12px 24px;
   font-weight: 500;
   text-decoration: none;
 }
@@ -91,7 +94,7 @@ footer ul {
   justify-content: center;
   align-items: center;
   list-style: none;
-  gap: 16px;
+  gap: 32px;
 }
 footer ul li a {
   display: flex;
