--- a/style.css
+++ b/style.css
@@ -3,12 +3,28 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --text-color: white;
+  --br-url: url(./assets/bg-mobile-dark.jpg);
+  --outline-hover: rgb(255, 255, 255, 0.1);
+  --border-color: rgb(255, 255, 255, 0.5);
+  --li-bg-color: rgb(255, 255, 255, 0.05);
+  --switch-bg-url: url(./assets/moon.svg)
+}
+.homolog {
+  --text-color: black;
+  --br-url: url(./assets/bg-mobile-light.jpg);
+  --outline-hover: rgb(0, 0, 0, 0.1);
+  --border-color: rgb(0, 0, 0, 0.5);
+  --li-bg-color: rgb(0, 0, 0, 0.05);
+  --switch-bg-url: url(./assets/sun.svg)
+}
 body {
-  background: url(./assets/bg-mobile-dark.jpg) no-repeat top center/cover;
+  background: var(--br-url) no-repeat top center/cover;
 }
 body * {
   font-family: "Inter", sans-serif;
-  color: white;
+  color: var(--text-color);
 }
 #container {
   width: 720px;
@@ -28,13 +44,47 @@ body * {
   outline: 8px solid transparent;
 }
 #profile img:hover {
-  outline: 8px solid rgb(255, 255, 255, 0.1);
+  outline: 8px solid var(--outline-hover);
   transition: 0.5s;
 }
 #profile p {
   font-weight: 500;
   margin-top: 8px;
   line-height: 24px;
+}
+#switch {
+  position: relative;
+  width: 64px;
+  margin: 4px auto;
+}
+#switch button {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  border: 1px solid var(--border-color);
+  background: white var(--switch-bg-url) no-repeat center;
+  position: absolute;
+  z-index: 1;
+  transform: translateY(-50%);
+  top: 50%;
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.10);
+  outline: 6px solid transparent;
+}
+.homolog #switch button {
+  right: 0;
+  left: initial;
+}
+#switch button:hover {
+  outline: 6px solid var(--outline-hover);
+  transition: 0.5s;
+}
+#switch span {
+  display: block;
+  width: 64px;
+  height: 24px;
+  border: 1px solid var(--border-color);
+  background: var(--li-bg-color);
+  border-radius: 9999px;
 }
 #portals {
   padding: 24px;
@@ -47,8 +97,8 @@ body * {
 }
 #portals li {
   width: calc(50% - 10px);
-  border: 1px solid rgb(255, 255, 255, 0.5);
-  background: rgb(255, 255, 255, 0.05);
+  border: 1px solid var(--border-color);
+  background: var(--li-bg-color);
   border-radius: 8px;
 }
 #portals li a {
@@ -59,8 +109,8 @@ body * {
   text-decoration: none;
 }
 #portals li:hover {
-  border: 1.5px solid rgb(255, 255, 255, 1);
-  background: rgb(255, 255, 255, 0.1);
+  border: 1.5px solid var(--text-color);
+  background: var(--outline-hover);
   transition: 0.5s;
 }
 #social-links {
@@ -78,7 +128,7 @@ body * {
   border-radius: 50%;
 }
 #social-links a:hover {
-  background: rgba(255, 255, 255, 0.1);
+  background: var(--outline-hover);
   transition: 0.5s;
 }
 footer {
@@ -113,6 +163,6 @@ footer ul li a img {
   border-radius: 50%;
 }
 footer ul li a:hover img {
-  outline: 6px solid rgba(255, 255, 255, 0.1);
+  outline: 6px solid var(--outline-hover);
   transition: 0.5s;
 }
